--- a/src/css/App.css
+++ b/src/css/App.css
@@ -295,6 +295,7 @@ h2:hover {
   flex-direction: column;
   align-content: center;
   align-items: center;
+  margin-bottom: 80px;
 }
 .contenedor-titulo .titulo{
   font-size: 60px;
@@ -325,4 +326,74 @@ padding: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+/*Muestra Menu navbar*/
+.contenedor-muestra-menu .nav{
+  background: transparent;
+  justify-content: center;
+  border-bottom: transparent;
+}
+
+.contenedor-muestra-menu .nav .nav-item{
+  margin: 0 5px;
+ background:transparent;
+ font-family: "Open Sans", sans-serif;
+ font-weight: 400;
+ font-size: 18px;
+ color: #c49b63;
+ letter-spacing: 1px;
+ border: none;
+ border-bottom: 1px solid #c49b63;
+ 
+}
+.contenedor-muestra-menu .nav .nav-item:hover{
+  color: #000;
+  background: #c49b63;
+  border-radius: 0px;
+  border: none;
+}
+.contenedor-muestra-menu .nav .active{
+  background-color: #c49b63 !important;
+  border-bottom: 1px solid transparent !important;
+  border-radius: 0px !important;
+  color: #000 !important;
+}
+/*Muestra Menu Card*/
+.contenedor-muestra-menu .card{
+  background: transparent;
+  border: transparent;
+}
+.contenedor-muestra-menu .card-img-top{
+  height: 270px;
+  background: url('../images/dish-2.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.contenedor-muestra-menu .card-body .card-title{
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+.contenedor-muestra-menu .card-body .card-text{
+  color: #808080;
+  font-size: 18px;
+}
+.contenedor-muestra-menu .card-body p{
+  margin-bottom: 20px;
+}
+.contenedor-muestra-menu .card-body span{
+  display: block;
+  color: #ffffff;
+  font-size: 18px;
+}
+.contenedor-muestra-menu .card-footer{
+  background: transparent;
+  border: transparent;
+}
+.contenedor-muestra-menu .card-footer .btn-muestra{
+  background: transparent;
+  border: 1px solid #c49b63 ;
+  border-radius: 0px;
+  color: #c49b63;
 }
