--- a/src/css/App.css
+++ b/src/css/App.css
@@ -326,6 +326,7 @@ padding: 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 150px;
 }
 /*Muestra Menu navbar*/
 .contenedor-muestra-menu .nav{
@@ -396,4 +397,60 @@ padding: 0px;
   border: 1px solid #c49b63 ;
   border-radius: 0px;
   color: #c49b63;
+}
+
+/*Footer*/
+.contenedor-footer{
+  width: 100%;
+  height: 720px;
+  background: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contenedor-footer .footer{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+}
+.contenedor-footer .footer .footer-about-us h2{
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+.contenedor-footer .footer .footer-about-us p{
+  color: #808080;
+  font-size: 20px;
+}
+.contenedor-footer .footer .footer-about-us ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+.contenedor-footer .footer .footer-about-us ul li{
+  margin: 0px;
+  width: 50px;
+  height: 50px;
+  background: #1E1B1B;
+  border-radius: 50%;
+}
+.contenedor-footer .footer .footer-about-us ul li a{
+  width: 100%;
+  height: 100%;  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 25px;
+
+}
+.contenedor-footer .footer .footer-about-us ul li a:hover{
+  text-decoration: none;
 }
